2021-09-17  Noah Sanci  <nsanci@redhat.com>

	* debuginfod-client.c (debuginfod_query_server): curl_multi_perform
	now occurs before checking if response headers have arrived.

2021-09-14  Frank Ch. Eigler <fche@redhat.com>

	PRPR28339
	* debuginfod.cxx (waitq::fronters): New field.
	(waitq::wait_idle): Respect it.
	(waitq::done_front): New function.
	(thread_main_scanner): Call it to match wait_front().

2021-09-12  Mark Wielaard  <mark@klomp.org>

	* debuginfod.cxx (libarchive_fdcache::lookup): Add endl after
	obatched(clog) line.
2021-09-13  Noah Sanci  <nsanci@redhat.com>

	* debuginfod-client.c (debuginfod_query_server): Removed constant
	operations from a loop. curl_free memory.

2021-09-06  Dmitry V. Levin  <ldv@altlinux.org>

	* debuginfod-client.c (debuginfod_begin): Remove cast of calloc return
	value.

2021-08-28  Mark Wielaard  <mjw@redhat.com>

	* debuginfod.cxx (parse_opt): Turn the -d arg ":memory:" into
	"file::memory:?cache=shared" for the db_path.

2021-08-20  Di Chen  <dichen@redhat.com>

	* debuginfod.cxx (options): Add ARGP_KEY_FORWARDED_TTL_LIMIT.
	(forwarded_ttl_limit): New static unsigned.
	(parse_opt): Handle ARGP_KEY_FORWARDED_TTL_LIMIT.
	(handle_buildid): Check forwarded_ttl_limit.
	(main): Log forwarded ttl limit.

2021-08-20  Saleem Abdulrasool  <abdulras@google.com>

	* debuginfod.cxx: Remove error.h include.

2021-08-19  Frank Ch. Eigler  <fche@redhat.com>

	PR28249
	* debuginfod.cxx (handler_cb): Fix after_you unique_set key
	to the entire incoming URL.

2021-08-02  Noah Sanci  <nsanci@redhat.com>

	PR27277
	* debuginfod-client.c (struct debuginfod_client): New field
	winning_headers.
	(struct handle_data): New field response_data, response_data_size.
	(header_callback): Store received headers in response_data.
	(debuginfod_query_server): Activate CURLOPT_HEADERFUNCTION.
	Save winning response_data.
	(debuginfod_end): free client winning headers.
	* debuginfod.cxx (handle_buildid_f_match): remove X-DEBUGINFOD-FILE